--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,12 +7,12 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --foreground: 29, 31%, 34%; /* Gris oscuro para texto, para un contraste fuerte */
+    --card: 245, 245, 245; /* Gris muy claro para tarjetas y menús */
+    --card-foreground: 29, 31%, 34%; /* Gris oscuro para texto sobre tarjetas */
+    --popover: 240, 2%, 98%; /* Blanco ligeramente azulado para el fondo del menú */
+    --popover-foreground: 29, 31%, 34%; /* Gris oscuro para texto del menú */
+    --primary: 143, 35%, 45%; /* Verde suave para acentos primarios, botones */
     --primary-foreground: 0 0% 98%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
@@ -34,12 +34,12 @@
 
   .dark {
     --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --foreground: 240, 5%, 96%; /* Blanco suave para texto en modo oscuro */
+    --card: 29, 22%, 23%; /* Gris oscuro para tarjetas en modo oscuro */
+    --card-foreground: 240, 5%, 96%; /* Blanco suave para texto en tarjetas en modo oscuro */
+    --popover: 19, 20%, 22%; /* Gris muy oscuro para el fondo del menú en modo oscuro */
+    --popover-foreground: 240, 5%, 96%; /* Blanco suave para texto del menú en modo oscuro */
+    --primary: 143, 35%, 45%; /* Verde suave para acentos primarios, botones */
     --primary-foreground: 240 5.9% 10%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
